7160
The current behavior is that transcript pastes discard lines that don't start with either the scala prompt or the line continuation vertical bar prompt. Everything else is assumed to be previous output.

So it's possible to manually type in the five spaces, vbar, space, then new code.

It would be nice if it started an interactive session with incomplete input.

Regular paste does alert about incomplete input, at least.
```scala
scala> :pa
// Entering paste mode (ctrl-D to finish)

def f() = {

// Exiting paste mode, now interpreting.

The pasted code is incomplete!

<pastie>:2: error: Missing closing brace `}' assumed here
def f() = {
^

scala> scala> def f() = {

// Detected repl transcript paste: ctrl-D to finish.

// Replaying 1 commands from transcript.

scala> def f() = {


scala> scala> def f() = {

// Detected repl transcript paste: ctrl-D to finish.

     | }
// Replaying 1 commands from transcript.

scala> def f() = {
}
f: ()Unit
```
